# mnnk525

./: .dockerignore  .gitignore  NEEDS_ER.md  POLARIS_3DB_팀설명.html  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: account_dict.py  aliases.py  config.py  db.py  main.py  models.py  relations.py  scheduler.py
backend/app/routers/: briefing.py  changes.py  company.py  dashboard.py  digest.py  evidence.py  fundamentals.py  graph.py  insights.py  ir.py  market.py  meta.py  news.py  node.py  node_evidence.py  track.py
pola/: .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml
pola/data/4_dbGoldTest/news_extracts/: full_00126380.jsonl  missing1.jsonl  sample.jsonl
pola/docker/: Dockerfile  docker-compose.yml
pola/docs/: ARCHITECTURE.md  BENCHMARKS.md  CLAUDE_DIRECT_PLAYBOOK.md  ERD.md  FUNCTIONAL_SPEC.md  INSTALL.md  TODO_재현성강화.md
pola/docs/APIdocs/: API_메타카탈로그.xlsx
pola/docs/adr/: 001-contextual-retrieval.md  002-비교-그래프-분리.md  003-bm25-자유서술-비활성.md  004-rdb-ssot-news-dart.md  005-뉴스-매칭-제거.md  006-pdf-3종-only.md  007-ftc-multi-pattern.md  008-의미-그래프-LLM-격리.md  010-chunk-evidence-edge-recovery.md  011-event-prov-recovery.md  012-corp-code-canonicalization.md  013-entity-precision-guard.md  014-confidence-rescoring.md  015-vector-er-augmentation.md  016-chunk-store-consistency.md  017-blue-green-chunk-cleanup.md  020-sota-upgrade-kggen-instructor.md  021-claude-direct-extraction.md  022-출력-스펙-freeze.md
pola/scripts/: add_company.ps1  backfill_table_vectors.py  cleanup_documents.py  diag_dump_integrity.py  dump_dbs.ps1  fetch_news_body.py  load_company_claude_direct.py  load_news_to_neo4j.py  news_load_extracts.py  rag_test.py  restore_dbs.ps1  sample_docs.json
pola/scripts/news_graph/: assemble.py  export_batches.py  extract_workflow.template.js
pola/src/polaris/: __init__.py  cli.py  config.py
pola/src/polaris/admin/: ensure_aliases.py  load_chunk_nodes.py  load_finmetric.py  mark_boilerplate.py  migrate_dart_to_rdb.py  migrate_news_to_rdb.py  reembed_table_contextual.py  reembed_text_contextual.py  verify_ingestion.py
pola/src/polaris/analyze/: __init__.py  daily_digest.py  keywords.py  sentiment.py  snapshot_edges.py  stock_load.py  stock_update.py
pola/src/polaris/chunk/: bok.py  ftc.py  kosis.py  krx.py  news.py  summary.py  table.py  text.py
pola/src/polaris/db/: graph_diag.py  init_mariadb.py  init_mariadb.sql  init_neo4j.py  init_qdrant.py  load_mariadb.py  load_neo4j.py  load_qdrant.py  promote_run.py  verify_consistency.py
pola/src/polaris/embed/: bge_m3.py
pola/src/polaris/eval/: gold_graph.py  gold_vector.py
pola/src/polaris/graph/: __init__.py  common.py  er_index.py  extract_all.py  extract_events.py  extract_ftc_groups.py  extract_invests.py  extract_persons.py  extract_shareholders.py  kggen_adapter.py  linker.py  loader_semantic.py  merger.py  normalize_news_graph.py  pipeline.py  reifier.py  schema.py
pola/src/polaris/ingest/: bulk_collect.py  disclosure_poll.py  ir_report_ingest.py  stage_a_collect.py  stage_b1_html.py  stage_b2_clean.py  stage_b3_doc_index.py  stage_b4_news.py
pola/tests/: test_gold_schema.py  test_smoke.py
pola/tests/gold/: _candidates_20260526_1341_01.yml  _candidates_auto_20260526_1341_01.yml  _expand_v2.py  _gen_graph_v1.py  _generate_v1.py  _regen_text_v3.py  graph_semantic_v1.yml  graph_v1.yml  v3.yml
(+123 files in other folders)
