[project]
name = "polaris-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.105.2",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "neo4j>=6.2.0",
    "pydantic-settings>=2.14.1",
    "pymysql>=1.2.0",
    "qdrant-client>=1.18.0",
    "uvicorn[standard]>=0.48.0",
]
