[project]
name = "polaris-rag"
version = "0.1.0"
description = "POLARIS — 반도체 기업 GraphRAG (Qdrant + MariaDB + Neo4j, bge-m3 + Contextual Retrieval)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "POLARIS team" }]
keywords = ["rag", "graphrag", "korean", "dart", "vector-search", "neo4j"]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
]

# 핵심 의존성 (GPU/torch 는 extras 로 분리)
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.8",
    "pydantic-settings>=2.5",
    "typer>=0.13",
    "rich>=13.9",
    "loguru>=0.7",
    "beautifulsoup4>=4.12",
    "lxml>=5.3",
    "qdrant-client>=1.12",
    "pymysql>=1.1",
    "neo4j>=5.24",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "semchunk>=4.0",
    "tokenizers>=0.20",
    "rank-bm25>=0.2.2",
    "transformers>=4.45,<5.0",
    "pyahocorasick>=2.3.1",
    "fastapi>=0.136.3",
    "uvicorn>=0.48.0",
    "playwright>=1.60.0",
    "readability-lxml>=0.8.4.1",
    "pymupdf>=1.27.2.3",
    "pillow>=12.2.0",
    "kiwipiepy>=0.23.1",
]

[project.optional-dependencies]
# GPU 백엔드 — 사용자 환경에 맞춰 1개만 선택
cuda = ["torch>=2.4"]                          # NVIDIA CUDA
rocm = ["torch>=2.4"]                          # AMD ROCm (Linux/WSL2). 별도 index 필요
cpu = ["torch>=2.4"]                           # CPU only
directml = ["torch>=2.4,<2.5", "torch-directml>=0.2"]  # Windows AMD GPU
# 운영 도구
admin = ["pymupdf>=1.27", "openpyxl>=3.1"]
# 개발
dev = ["pytest>=8.3", "ruff>=0.7", "python-pptx>=1.0"]

[project.scripts]
polaris = "polaris.cli:app"

[project.urls]
Repository = "https://github.com/polaris/polaris-rag"
Documentation = "https://github.com/polaris/polaris-rag/tree/main/docs"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/polaris"]

[tool.hatch.build.targets.wheel.force-include]
"src/polaris/data/corps.json" = "polaris/data/corps.json"

[tool.ruff]
line-length = 110
target-version = "py311"
extend-exclude = ["tests/gold/data", ".docker-data"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501", "B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra --strict-markers"
